testsuite/tests/parser/should_fail/T15209.stderr

T15209.hs:6:10: error:
    Not in scope: type constructor or class ‘~#’
    Perhaps you meant ‘~’ (imported from Prelude)
